--- a/components/own_object/OwnObject.module.scss
+++ b/components/own_object/OwnObject.module.scss
@@ -48,7 +48,7 @@
       width: 100%;
       height: 100%;
       transition: all 0.4s ease-in-out;
-      background: linear-gradient(227.96deg, rgba(123, 169, 0, 0.86) -21.84%, #337700 103.24%);
+      background: linear-gradient(227.96deg, rgba(123, 169, 0, 0.86) -21.84%, #3477008c 103.24%);
       backdrop-filter: blur(5.5px);
       padding: 50px 40px 20px 30px;
       @include ipadScreen {
@@ -59,7 +59,7 @@
         &:after {
           display: block;
           content: "";
-          background: linear-gradient(227.96deg, rgba(123, 169, 0, 0.86) -21.84%, #337700 103.24%);
+          background: linear-gradient(227.96deg, rgba(124, 169, 0, 0.63) -21.84%, #337700 103.24%);
           height: 1px;
           width: 0%;
           bottom: -12px;
