--- a/components/pagination/Pagination.module.scss
+++ b/components/pagination/Pagination.module.scss
@@ -6,6 +6,7 @@
   margin-top: 24px;
   column-gap: 15px;
   justify-content: center;
+  margin-bottom: 100px;
 
   .pagination_item {
     cursor: pointer;
