--- a/features/decision/Decision.module.scss
+++ b/features/decision/Decision.module.scss
@@ -1,8 +1,11 @@
 
+@import '../../styles/mixins.scss';
+@import '../../styles/variables.scss';
+
 .decision__container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 30px;
+  gap: 18px;
   margin-top: 60px;
   margin-bottom: 60px;
   img {
@@ -16,7 +19,8 @@
     position: relative;
     &_way_box {
       position: absolute;
-      backdrop-filter: blur(10px);
+      background: #0000002b;
+      backdrop-filter: blur(6px);
       border-radius: 20px;
       width: 100%;
       height: 100%;
@@ -24,8 +28,8 @@
       top: 0;
       box-sizing: border-box;
       &_title {
-        color: #fff;
-        font-weight: 700;
+        color: color(white);
+        font-weight: 500;
         font-size: 25px;
         line-height: 120%;
         letter-spacing: 1px;
@@ -47,5 +51,4 @@
       }
     }
   }
-
 }
