--- a/components/modal/Modal.module.scss
+++ b/components/modal/Modal.module.scss
@@ -31,7 +31,7 @@
     display: flex;
     justify-content: flex-end;
     cursor: pointer;
-    padding: 10px;
+    padding: 20px 16px 0 0;
   }
 
   .modal_dialog {
