--- a/components/modal/Modal.module.scss
+++ b/components/modal/Modal.module.scss
@@ -13,6 +13,7 @@
   justify-content: center;
   animation-name: bgModal;
   animation-duration: 300ms;
+
   @include phoneScreen {
     padding: 0 10px;
   }
@@ -29,9 +30,12 @@
 
   &_close {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     cursor: pointer;
-    padding: 20px 16px 0 0;
+    padding: 20px 20px 0 20px;
+    >div{
+      text-align: left;
+    }
   }
 
   .modal_dialog {
@@ -46,6 +50,7 @@
     -webkit-animation-duration: 0.4s;
     animation-name: slide-in;
     animation-duration: 0.3s;
+    box-shadow: 0 0 30px rgb(20 20 20 / 30%);
     .modal_header,
     .modal_footer {
       display: flex;
@@ -60,7 +65,7 @@
     .modal_body {
       overflow: auto;
       .modal_content {
-        padding: 20px 30px 30px 30px;
+        padding: 20px 20px 30px 20px;
         color: color(dark);
         line-height: 20px;
         @include phoneScreen {
