--- a/features/resources/tab_bim/Bim.module.scss
+++ b/features/resources/tab_bim/Bim.module.scss
@@ -1,4 +1,3 @@
-@import '../../../styles/mixins.scss';
 @import '../../../styles/variables.scss';
 
 .bim_container {
@@ -15,12 +14,13 @@
   margin-bottom: 80px;
   &__item {
     margin-bottom: 20px;
-    padding: 0 0 15px 0;
+    padding: 0 0 50px 0;
     border-radius: 10px;
     overflow: hidden;
     background-color: rgb(245, 245, 245);
     transition: all 0.3s;
     cursor: pointer;
+    position: relative;
     &:hover {
       box-shadow: 0 0 30px rgba(20, 20, 20, 0.2);
       transform: translateY(-2px);
@@ -28,6 +28,17 @@
       p{
         color: #F89A00;
       }
+    }
+
+    &__calendar {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      padding: 10px;
+      background-color: #e9e9e9;
     }
   }
 
