--- a/features/contacts/tab_sales_office/SalesOffice.module.scss
+++ b/features/contacts/tab_sales_office/SalesOffice.module.scss
@@ -27,3 +27,18 @@
   }
 }
 
+.styles_map{
+  color: color(green);
+  font-size: 18px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: flex-start;
+  gap: 5px;
+  svg{
+    width: 20px;
+    height: 20px;
+    path{
+      fill: color(green)
+    }
+  }
+}
