--- a/components/separator/Separator.module.scss
+++ b/components/separator/Separator.module.scss
@@ -2,7 +2,7 @@
 @import '../../styles/variables.scss';
 
 .separator{
-  margin: 80px 0 20px 0;
+  margin: 50px 0 20px 0;
   text-align: center;
   .separator_title{
     font-family: 'Ubuntu', sans-serif;
@@ -15,6 +15,11 @@
     color: color(dark);
     @include phoneScreen {
       font-size: 30px;
+      line-height: 145%;
+    }
+
+    @media (max-width: 400px) {
+      font-size: 25px;
     }
   }
 }
