--- a/features/contacts/tab_interaction/Interaction.module.scss
+++ b/features/contacts/tab_interaction/Interaction.module.scss
@@ -97,7 +97,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 auto 20px;
+  margin: 40px auto 0;
   a {
     display: flex;
     align-items: center;
