--- a/components/common/container/Container.module.scss
+++ b/components/common/container/Container.module.scss
@@ -13,15 +13,15 @@
   }
 
   @include tabletScreen {
-    padding: 0 30px;
+    padding: 50px 30px;
   }
 
   @include ipadScreen {
-    padding: 0 15px;
+    padding: 50px 15px;
   }
 
   @include phoneScreen {
-    padding: 0 10px;
+    padding: 50px 10px;
   }
 }
 .wrapper_clear{
