--- a/features/about/tab_who_we/Whowe.module.scss
+++ b/features/about/tab_who_we/Whowe.module.scss
@@ -1,3 +1,6 @@
+@import '../../../styles/mixins.scss';
+@import '../../../styles/variables.scss';
+
 .whowe_container{
   max-width: 600px;
   display: flex;
@@ -16,6 +19,9 @@
     border-radius: 10px;
     overflow: hidden;
     height: 500px;
+    @include ipadScreen {
+     height: 300px;
+    }
 
     iframe {
       width: 100%;
