--- a/features/about/tab_who_we/achievements/Achievements.module.scss
+++ b/features/about/tab_who_we/achievements/Achievements.module.scss
@@ -1,8 +1,15 @@
+@import '../../../../styles/mixins.scss';
+@import '../../../../styles/variables.scss';
+
 .achievements_container{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 20px;
   margin-bottom: 40px;
+  @include ipadScreen {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+
   &_item{
     background: #009247;
     padding: 0 0 15px 0;
@@ -17,7 +24,8 @@
       &_desc{
         color: #FFF;
         font-weight: 300;
-        font-size: 16px;
+        font-size: 14px;
+        line-height: 145%;
       }
       padding: 10px 15px 0 15px;
     }
