--- a/features/contacts/tab_support/Support.module.scss
+++ b/features/contacts/tab_support/Support.module.scss
@@ -11,7 +11,6 @@
   @media (max-width: 500px) {
     padding: 40px 10px 25px 10px;
   }
-
   button {
     width: 220px;
   }
@@ -187,7 +186,7 @@
     border-radius: 10px;
     transition: all 0.3s ease 0s;
     &:hover {
-      box-shadow: 0px 5px 30px rgba(20, 20, 20, 0.3);
+      box-shadow: 0 5px 30px rgba(20, 20, 20, 0.3);
       transform: translateY(-3px);
       transition: all 0.3s;
     }
