--- a/features/contacts/tab_support/Support.module.scss
+++ b/features/contacts/tab_support/Support.module.scss
@@ -37,7 +37,7 @@
     }
 
     &__select {
-      margin: 18px 0 18px 0;
+      margin: 0;
       display: flex;
       align-items: center;
       gap: 40px;
