--- a/features/about/tab_who_we/achievements/Achievements.module.scss
+++ b/features/about/tab_who_we/achievements/Achievements.module.scss
@@ -17,12 +17,12 @@
     overflow: hidden;
     .info{
       h2{
-        color: #FFF;
+        color: color(white);
         font-size: 18px;
         margin-bottom: 8px;
       }
       &_desc{
-        color: #FFF;
+        color: color(white);
         font-weight: 300;
         font-size: 14px;
         line-height: 145%;
