--- a/features/contacts/tab_support/Support.module.scss
+++ b/features/contacts/tab_support/Support.module.scss
@@ -72,7 +72,7 @@
       padding: 11px 12px;
       text-align: right;
       border: 1px solid rgb(253, 253, 253);
-      background: #fff;
+      background: color(white);
       border-radius: 5px;
       svg {
         width: 20px;
@@ -175,7 +175,6 @@
     }
   }
 }
-
 //Теплеграм каналы
 .group__items {
   margin-bottom: 20px;
