--- a/features/about/tab_who_we/achievements/Achievements.module.scss
+++ b/features/about/tab_who_we/achievements/Achievements.module.scss
@@ -31,12 +31,13 @@
     }
 
     &_video{
+      height: max-content;
       video{
         object-fit: cover;
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 300px;
       }
     }
   }
