--- a/features/news/News.module.scss
+++ b/features/news/News.module.scss
@@ -6,11 +6,12 @@
     display: grid;
     margin-top: 40px;
     transition: all 0.3s;
-    border-radius: 10px;
+    border-radius: 15px;
     grid-template-columns: repeat(auto-fit, minmax(490px, 1fr));
     background-color: transparent;
     row-gap: 10px;
     margin-left: 5px;
+    box-shadow: 0 0 35px rgb(126 126 126 / 16%);
     @include ipadScreen {
       row-gap: 0;
     }
@@ -30,6 +31,11 @@
     }
 
     &:nth-child(even) {
+      &:hover {
+        box-shadow: 0 0 17px #088122;
+        transition: all 0.3s;
+        border-color: #0AB016;
+      }
       .news_container_item_right {
         order: 0;
         border-radius: 10px 0 0 10px;
@@ -48,11 +54,6 @@
           border-radius: 10px 10px 0 0;
         }
       }
-    }
-
-    &:hover {
-      box-shadow: 0 0 17px #088122;
-      transition: all 0.3s;
     }
 
     &:hover &_right {
