--- a/features/news/NewsPage/NewsPageItem.module.scss
+++ b/features/news/NewsPage/NewsPageItem.module.scss
@@ -2,7 +2,6 @@
 @import '../../../styles/variables.scss';
 
 .news__active {
-
   &__img {
     width: 100%;
     height: 600px;
@@ -25,8 +24,8 @@
       align-items: center;
       gap: 8px;
       position: absolute;
-      right: 0px;
-      bottom: 0px;
+      right: 0;
+      bottom: 0;
       padding: 10px 20px;
       border-radius: 8px 0 0 0;
       p {
