--- a/features/contacts/tab_support/Support.module.scss
+++ b/features/contacts/tab_support/Support.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/mixins.scss';
 @import '../../../styles/variables.scss';
 
-//Форма регистрации
+//Форма заказа
 .support__form {
   max-width: 850px;
   margin: 0 auto;
@@ -48,6 +48,40 @@
 
     &__textarea {
       margin: 10px 0 20px 0;
+    }
+
+    .support__form__added__file {
+      max-width: 80%;
+      position: relative;
+      padding: 20px 10px;
+      border-bottom: 1px solid #7f7f7f;
+      margin: 0 0 20px 0;
+      display: flex;
+      @media (max-width: 850px) {
+        max-width: 70%;
+      }
+
+      @media (max-width: 500px) {
+        max-width: 50%;
+      }
+
+      .support__form_file {
+        position: absolute;
+        left: 100%;
+        cursor: pointer;
+        span {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          font-size: 14px;
+          svg {
+            margin-left: 12px;
+          }
+        }
+        input {
+          display: none;
+        }
+      }
     }
   }
 
@@ -175,6 +209,7 @@
     }
   }
 }
+
 //Теплеграм каналы
 .group__items {
   margin-bottom: 20px;
