--- a/components/tabs/Tabs.module.scss
+++ b/components/tabs/Tabs.module.scss
@@ -27,7 +27,10 @@
         border-radius: 5px;
         cursor: pointer;
         &_active {
-          color: color(white);
+          color: color(green);
+          @media (max-width: 650px) {
+            color: color(white);
+          }
           &:after {
             content: "";
             position: absolute;
