--- a/components/button/Button.module.scss
+++ b/components/button/Button.module.scss
@@ -1,10 +1,6 @@
-%mediumSize {
-  width: 250px;
-}
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
 
-%largeSize {
-  width: 300px;
-}
 
 %smallSize {
   width: 168px;
@@ -76,39 +72,37 @@
 
 .banner {
   &__medium {
-    @extend %mediumSize;
-
     &_green {
       @extend %colorGreen;
+      @include mediumSize;
     }
 
     &_white {
       @extend %colorWhite;
+      @include mediumSize;
     }
 
     &_link {
+      @include mediumSize;
       @extend %colorLink
     }
   }
 
   &__large {
-    @extend %largeSize;
-
     &_green {
       @extend %colorGreen;
-      @extend %largeSize;
-      width: 300px;
-
+      @include largeSize;
     }
 
     &_white {
       @extend %colorWhite;
-      @extend %largeSize;
+      @include largeSize;
 
     }
 
     &_link {
       @extend %colorLink
+
     }
   }
 
@@ -183,7 +177,7 @@
     }
   }
   &__medium {
-    @extend %mediumSize;
+   // @extend %mediumSize;
 
     &_green {
       @extend %colorGreen;
@@ -199,14 +193,15 @@
   }
 
   &__large {
-    @extend %largeSize;
 
     &_green {
       @extend %colorGreen;
+      @include largeSize;
     }
 
     &_white {
       @extend %colorWhite;
+      @include largeSize;
     }
 
     &_link {
@@ -284,14 +279,16 @@
 
   text-align: left;
   &__medium {
-    @extend %mediumSize;
+    //@extend %mediumSize;
 
     &_green {
       @extend %colorGreen;
+      @include mediumSize;
     }
 
     &_white {
       @extend %colorWhite;
+      @include mediumSize;
     }
 
     &_link {
@@ -300,14 +297,15 @@
   }
 
   &__large {
-    @extend %largeSize;
 
     &_green {
       @extend %colorGreen;
+      @include largeSize;
     }
 
     &_white {
       @extend %colorWhite;
+      @include largeSize;
     }
 
     &_link {
