--- a/styles/include/_slider.scss
+++ b/styles/include/_slider.scss
@@ -1,3 +1,5 @@
+@import '../../styles/mixins.scss';
+@import '../../styles/variables.scss';
 .swiper {
   width: 100%;
   .swiper-pagination {
@@ -38,6 +40,10 @@
       opacity: 0.2;
       margin-left: -5px;
     }
+  }
+  .swiper-button-next,
+  .swiper-button-prev{
+    color: color(green);
   }
   .swiper-wrapper{
     position: relative;
