--- a/features/contacts/Contacts.module.scss
+++ b/features/contacts/Contacts.module.scss
@@ -12,7 +12,7 @@
     background-color: rgb(245, 245, 245);
     transition: all 0.3s;
     &:hover {
-      box-shadow: 0px 0px 30px rgba(20, 20, 20, 0.3);
+      box-shadow: 0 0 30px rgba(20, 20, 20, 0.3);
       transform: translateY(-2px);
       transition: all 0.3s;
     }
