--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,18 +1,18 @@
-
 $colors: (
-  black: #000,
-  dark: #212121,
-  white: #FFF,
-  lightgreen: #2E6143,
-  green: #009247
+        black: #000,
+        border_bottom: #e1e1e1,
+        dark: #212121,
+        white: #FFF,
+        lightgreen: #2E6143,
+        green: #009247
 );
 
 $screenWidth: (
-  pc: 1920px,
-  tablet: 1300px,
-  ipad: 1024px,
-  phone: 768px,
-  SE: 375px,
+        pc: 1920px,
+        tablet: 1300px,
+        ipad: 1024px,
+        phone: 768px,
+        SE: 375px,
 );
 
 
