--- a/features/search/Search.module.scss
+++ b/features/search/Search.module.scss
@@ -1,3 +1,6 @@
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
+
 .search__box_item{
   padding: 20px;
   background-color: #f3f3f3;
@@ -12,5 +15,34 @@
     font-size: 14px;
     line-height: 1.3
   ;
+  }
+}
+.search__items__info{
+  border-bottom: 1px solid color(border_bottom);
+  padding: 10px 0;
+  &:last-child{
+    border: none;
+  }
+  h1 {
+    font-size: 18px;
+    margin-bottom: 12px;
+  }
+
+  p {
+    font-size: 14px;
+  }
+  .more{
+    display: flex;
+    justify-content: flex-end;
+    cursor: pointer;
+    a {
+      color: color(black);
+      transition: all 0.3s;
+      font-size: 14px;
+
+      &:hover {
+        color: color(green);
+      }
+    }
   }
 }
