--- a/components/common/header/Header.module.scss
+++ b/components/common/header/Header.module.scss
@@ -2,7 +2,7 @@
 @import '/styles/variables.scss';
 
 .header {
-  box-shadow: 0px 3px 5px rgb(30 158 0 / 90%);
+  box-shadow: 0 3px 5px rgb(30 158 0 / 90%);
   background-color: #fff;
   position: fixed;
   top: 0;
@@ -20,13 +20,13 @@
     justify-content: space-between;
     align-items: center;
     transition: all 0.3s;
-    padding: 15px 0;
+    padding: 10px;
   }
      @media (max-width: 1200px) {
-      padding: 25px 0 30px 0;
+      padding: 25px 10px 30px 10px;
     }
   }
-  
+
   &__logo {
     img {
       width: 130px;
