--- a/features/about/tab_job/jobModal/ModalJob.module.scss
+++ b/features/about/tab_job/jobModal/ModalJob.module.scss
@@ -1,75 +1,68 @@
 @import '../../../../styles/mixins.scss';
 @import '../../../../styles/variables.scss';
 
-//Форма заказа
 .job__modal {
+  background: color(white);
+  border-radius: 10px;
+  button {
+    width: 100%;
+    margin: 0 0 10px 0;
+  }
 
-  &__inputs {
-    .job__modal__form__items__input {
+  &__items {
+    overflow: hidden;
+    &__title {
+      h2 {
+        font-size: 30px;
+        line-height: 30px;
+        font-weight: 800;
+        font-size: 32px;
+        text-align: center;
+        text-transform: uppercase;
+        @include phoneScreen {
+          font-size: 25px;
+          line-height: 22px;
+        }
+      }
+      p {
+        margin-top: 10px;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 18px;
+        text-align: center;
+        color: color(dark);
+        @include phoneScreen {
+          font-size: 14px;
+        }
+      }
+    }
+
+    &__input {
       display: flex;
-      justify-content: space-between;
-      gap: 40px;
+      align-items: center;
+      gap: 20px;
       @include phoneScreen {
         flex-direction: column;
         gap: 0;
       }
 
-      .job__modal__form__item__input,
-      .job__modal__form__items__input__bottom {
-        font-size: 12px;
+      textarea {
+        box-sizing: border-box;
         width: 100%;
-        display: flex;
-        flex-direction: column;
-        input {
-          width: 100%;
-        }
-
-        .overflow {
-          margin-top: 5px;
-          transition: all 0.3s;
-          height: 23px;
-          opacity: 0;
-          transform: translateY(-10px);
-          span {
-            margin: 0 0 0 10px;
-          }
-        }
-
-        &_error {
-          color: red;
-          border-radius: 8px;
-          font-size: 12px;
-          width: 100%;
-          .overflow__auto {
-            margin-top: 5px;
-            opacity: 1;
-            transition: all 0.3s;
-            transform: translateY(0px);
-            height: 23px;
-            span {
-              margin: 0 0 0 10px;
-            }
-          }
-
-          .input__item {
-            border-color: red;
-            width: 100%;
-          }
-        }
-      }
-      .job__modal__form__items__input__bottom {
-        display: flex;
-        align-items: center;
-        ul {
-          display: flex;
-          align-items: center;
+        height: 80px;
+        padding: 8px;
+        color: color(dark);
+        font-size: 14px;
+        line-height: 22px;
+        border: 1px solid #bcbdc0;
+        margin: 20px 0;
+        border-radius: 5px;
+        @include phoneScreen {
+          margin: 10px 0;
         }
       }
     }
   }
-
-
-
 
   &__item {
     display: flex;
@@ -82,13 +75,9 @@
       flex-direction: column;
       row-gap: 0;
     }
-
+    
     ul {
       width: 100%;
-    }
-
-    &:nth-child(6) {
-      margin-bottom: 20px;
     }
 
     input {
@@ -96,9 +85,84 @@
     }
 
     &__forgot {
-      margin: 0 0 20px 0;
+      margin: 0 0 50px 0;
     }
   }
 
+  &__items__added__file {
+    max-width: 60%;
+    position: relative;
+    padding: 20px 10px;
+    border-bottom: 1px solid #7f7f7f;
+    margin: 0 0 20px 0;
+    display: flex;
+    @media (max-width: 850px) {
+      max-width: 50%;
+    }
 
+    @media (max-width: 500px) {
+      max-width: 40%;
+    }
+
+    &__items {
+      position: absolute;
+      left: 100%;
+      cursor: pointer;
+      span {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        font-size: 14px;
+        svg {
+          margin-left: 12px;
+        }
+      }
+      input {
+        display: none;
+      }
+    }
+  }
+
+  &__item__input {
+    font-size: 12px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    input {
+      width: 100%;
+    }
+
+    .overflow {
+      margin-top: 5px;
+      transition: all 0.3s;
+      height: 23px;
+      opacity: 0;
+      transform: translateY(-10px);
+      span {
+        margin: 0 0 0 10px;
+      }
+    }
+
+    &_error {
+      color: red;
+      border-radius: 8px;
+      font-size: 12px;
+      width: 100%;
+      .overflow__auto {
+        margin-top: 5px;
+        opacity: 1;
+        transition: all 0.3s;
+        transform: translateY(0px);
+        height: 23px;
+        span {
+          margin: 0 0 0 10px;
+        }
+      }
+
+      .input__item {
+        border-color: red;
+        width: 100%;
+      }
+    } 
+  }
 }
