--- a/features/search/Search.module.scss
+++ b/features/search/Search.module.scss
@@ -20,7 +20,7 @@
 .search__items__info,
 .search__items__input
 {
-  border-bottom: 1px solid color(border_bottom);
+  border-bottom: 1px solid color(border);
   padding: 10px 0;
   &:last-child{
     border: none;
