--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,6 +1,6 @@
 $colors: (
         black: #000,
-        border_bottom: #e1e1e1,
+        border: #e1e1e1,
         dark: #212121,
         white: #FFF,
         lightgreen: #2E6143,
@@ -12,7 +12,7 @@ $screenWidth: (
         tablet: 1300px,
         ipad: 1024px,
         phone: 768px,
-        SE: 375px,
+        SE: 400px,
 );
 
 
