--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -1,5 +1,5 @@
-@import '../../styles/mixins.scss';
-@import '../../styles/variables.scss';
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
 
 .home {
   &_banner {
@@ -269,7 +269,6 @@
           height: 280px;
         }
 
-
         @media (max-width: 450px) {
           height: 240px;
         }
@@ -288,6 +287,37 @@
           object-fit: cover;
           height: 500px;
           width: 100%;
+          @media (max-width: 1530px) {
+            height: 600px;
+          }
+
+          @media (max-width: 1400px) {
+            height: 550px;
+          }
+
+          @media (max-width: 1240px) {
+            height: 500px;
+          }
+
+          @media (max-width: 830px) {
+            height: 420px;
+          }
+
+          @media (max-width: 610px) {
+            height: 350px;
+          }
+
+          @media (max-width: 500px) {
+            height: 280px;
+          }
+
+          @media (max-width: 450px) {
+            height: 240px;
+          }
+
+          @media (max-width: 400px) {
+            height: 220px;
+          }
         }
       }
     }
