--- a/features/home/about/About.module.scss
+++ b/features/home/about/About.module.scss
@@ -1,8 +1,8 @@
-@import '../../../styles/mixins.scss';
-@import '../../../styles/variables.scss';
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
 
 .about {
-
+  padding: 0 10px;
   &__container {
     width: 100%;
     height: 660px;
@@ -23,7 +23,7 @@
     }
 
     @include phoneScreen {
-      padding: 20px;
+      padding: 0;
     }
   }
 
@@ -75,6 +75,7 @@
 
     @include ipadScreen {
       text-align: left;
+      padding: 20px;
     }
   }
 
