--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -366,6 +366,7 @@
         @media (max-width: 600px) {
           font-size: 16px;
           padding: 5px 0 26px 0;
+
         }
 
       }
@@ -580,6 +581,9 @@
           border-radius: 20px;
           object-fit: cover;
           height: 461px;
+          @include tabletScreen {
+            height: 220px;
+          }
         }
       }
     }
@@ -607,8 +611,8 @@
           max-width: 490px;
         }
 
-        @media (max-width: 600px) {
-          font-size: 18px;
+        @include tabletScreen {
+          font-size: 16px;
           max-width: 350px;
         }
       }
@@ -629,8 +633,13 @@
         }
 
         @media (max-width: 600px) {
-          font-size: 16px;
+          font-size: 15px;
           padding: 5px 0 26px 0;
+          height: 80px;
+          overflow: hidden;
+          display: -webkit-box;
+          -webkit-line-clamp: 5;
+          -webkit-box-orient: vertical;
         }
       }
 
@@ -650,19 +659,13 @@
         left: 6%;
       }
 
-      @media (max-width: 1100px) {
-        top: 16%;
-        left: 5%;
-        padding: 25px 20px;
+
+      @include tabletScreen {
+        top: 10px;
+        bottom: 10px;
         border-radius: 20px;
-      }
-
-      @media (max-width: 600px) {
-        right: 5%;
-      }
-
-      @media (max-width: 500px) {
-        top: 12%;
+        padding: 10px;
+        min-width: 200px;
       }
     }
 
@@ -827,9 +830,10 @@
           padding: 5px 0 35px 0;
         }
 
-        @media (max-width: 600px) {
-          font-size: 16px;
+        @include tabletScreen {
+          font-size: 15px;
           padding: 5px 0 26px 0;
+
         }
 
       }
@@ -893,19 +897,8 @@
         left: 6%;
       }
 
-      @media (max-width: 1100px) {
-        top: 16%;
-        left: 5%;
-        padding: 25px 20px;
-        border-radius: 20px;
-      }
-
-      @media (max-width: 600px) {
-        right: 5%;
-      }
-
-      @media (max-width: 500px) {
-        top: 12%;
+      @include tabletScreen {
+        top: 10px;
       }
     }
 
