--- a/components/common/header/Header.module.scss
+++ b/components/common/header/Header.module.scss
@@ -13,23 +13,26 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 35px 0;
+    padding: 35px 10px;
     transition: all 0.3s;
-  &_active{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    transition: all 0.3s;
-    padding: 10px;
-  }
+    &_active {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      transition: all 0.3s;
+      padding: 15px 10px;
+    }
      @media (max-width: 1200px) {
-      padding: 25px 10px 30px 10px;
+      padding: 16px 10px 16px 10px;
     }
   }
 
   &__logo {
     img {
       width: 130px;
+      @include ipadScreen {
+        width: 110px;
+      }
     }
   }
 }
