--- a/components/common/layout/Layout.module.scss
+++ b/components/common/layout/Layout.module.scss
@@ -1,7 +1,7 @@
 .header {
   box-shadow: 0 3px 5px rgb(30 158 0 / 90%);
   background-color: #fff;
-  position: sticky;
+  position: fixed;
   top: 0;
   width: 100%;
   z-index: 99;
