--- a/components/common/header/headerNav/HeaderNav.module.scss
+++ b/components/common/header/headerNav/HeaderNav.module.scss
@@ -9,32 +9,30 @@
   @media (max-width: 1200px) {
     position: absolute;
     right: 0;
-    top: 85px;
-    display: none;
+    top: 56px;
     background: rgba(255, 255, 255, 0.99);
     backdrop-filter: blur(5px);
     flex-direction: column;
+    padding: 0 0 100% 0;
     align-items: center;
     width: 100%;
     transform: translateX(100%);
-    transition: transform 0.3s ease-in;
+    transition: transform 0.2s ease-in;
     z-index: 1;
   }
 
   &.active {
-    top: 85px;
-    display: flex;
-    transform: translateX(0%);
-    transition: transform 0.3s ease-in;
-
+    transform: translateX(0);
   }
+
   &.active_small {
     top: 50px;
     display: flex;
     transform: translateX(0%);
-    transition: transform 0.3s ease-in;
+    transition: transform 0.2s ease-in;
 
   }
+
   li {
     margin: 0 15px;
     font-size: 16px;
@@ -44,6 +42,9 @@
 
     &:last-child {
       margin-right: 0;
+      @media (max-width: 1200px) {
+        border-bottom: 1px solid #bdbdbd56;
+      }
     }
 
     &:first-child {
@@ -65,7 +66,6 @@
     font-size: 16px;
     letter-spacing: 0.025em;
     position: relative;
-
     &::after {
       content: "";
       display: block;
@@ -76,7 +76,6 @@
       height: 2px;
       background-color: color(dark);
       transition: width 0.3s;
-
       @media (max-width: 1200px) {
         display: none;
       }
@@ -84,7 +83,6 @@
 
     &:hover {
       color: color(lightgreen);
-
       &::after {
         content: "";
         width: 100%;
@@ -95,7 +93,6 @@
         height: 2px;
         background-color:  color(green);
         transition: width 0.3s;
-
         @media (max-width: 1200px) {
           display: none;
         }
