--- a/components/hamburger/Hamburger.module.scss
+++ b/components/hamburger/Hamburger.module.scss
@@ -1,20 +1,63 @@
 @import '/styles/variables.scss';
-.hamburger_container{
+
+.hamburger_container {
   display: flex;
   flex-direction: column;
-  gap: 3px;
-  .bar{
+  width: 22px;
+  height: 18px;
+  gap: 6px;
+
+  .bar {
     display: block;
-    width: 24px;
-    height: 5px;
+    width: 100%;
+    height: 2px;
     border-radius: 10px;
     background-color: color(green);
+    border-radius: 5px;
+    transition: all .2s ease;
   }
-  .bar_small{
+
+  .bar_small {
     display: block;
-    width: 15px;
-    height: 5px;
+    width: 100%;
+    height: 2px;
     border-radius: 10px;
     background-color: color(green);
+    transition: all .2s ease;
+    opacity: 1;
+    visibility: visible;
+  }
+
+//Стили при активе
+  &__active {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    width: 22px;
+    height: 18px;
+    .bar {
+      display: block;
+      width: 100%;
+      height: 2px;
+      border-radius: 10px;
+      background-color: color(green);
+      border-radius: 5px;
+      transition: all .2s ease;
+    }
+
+    .bar_1 {
+      transform: rotateZ(45deg) translate(6px, 6px);
+    }
+
+    .bar_2 {
+      transform: rotateZ(-45deg) translate(1px, -1px);
+    }
+  
+    .bar_small {
+      opacity: 0;
+      visibility: hidden;
+      transition: all .2s ease;
+    }
   }
 }
+
