--- a/features/contacts/tab_support/Support.module.scss
+++ b/features/contacts/tab_support/Support.module.scss
@@ -4,7 +4,7 @@
 //Форма заказа
 .support__form {
   max-width: 850px;
-  margin: 0 auto;
+  margin: 0 auto 0;
   background: #f3f3f3;
   border-radius: 10px;
   padding: 40px 20px 25px 20px;
