--- a/features/contacts/tab_interaction/Interaction.module.scss
+++ b/features/contacts/tab_interaction/Interaction.module.scss
@@ -49,6 +49,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit,minmax(290px,1fr));
   gap: 20px;
+  margin: 0 0 5% 0;
   &:last-child{
     margin-bottom: 40px;
   }
