--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -522,6 +522,12 @@
         height: 461px;
         max-width: 950px;
         margin: 0 auto;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
         @media (max-width: 1530px) {
           height: 600px;
         }
