--- a/components/common/layout/Layout.module.scss
+++ b/components/common/layout/Layout.module.scss
@@ -3,9 +3,17 @@
   background-color: #fff;
   position: sticky;
   top: 0;
+  bottom: 0;
   width: 100%;
   z-index: 99;
+
 }
 
  .main{
+   top: 0;
+   bottom: 0;
+   width: 100%;
+   height: 100vh;
+   overflow-x: hidden;
+   overflow-y: auto;
  }
