--- a/components/box_icon_social/Box_icon_social.module.scss
+++ b/components/box_icon_social/Box_icon_social.module.scss
@@ -1,5 +1,5 @@
-@import '../../styles/mixins.scss';
-@import '../../styles/variables.scss';
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
 
 .banner {
   .swiper-pagination .swiper-pagination-bullet {
