--- a/features/news/NewsPage/NewsPageItem.module.scss
+++ b/features/news/NewsPage/NewsPageItem.module.scss
@@ -2,6 +2,8 @@
 @import '../../../styles/variables.scss';
 
 .news__active {
+  margin-top: 40px;
+
   &__img {
     width: 100%;
     height: 600px;
@@ -28,15 +30,17 @@
       bottom: 0;
       padding: 10px 20px;
       border-radius: 8px 0 0 0;
+
       p {
         font-size: 18px;
         font-weight: 400;
         color: color(white);
       }
-      
+
       svg {
         width: 20px;
         height: 20px;
+
         path {
           fill: #fff;
         }
@@ -47,6 +51,7 @@
   &__info {
     width: 100%;
     margin-bottom: 5%;
+
     h1 {
       margin: 0 0 12px 12px;
       font-size: 30px;
@@ -54,6 +59,7 @@
       letter-spacing: 0.025em;
       color: color(green);
       position: relative;
+
       &:before {
         content: '';
         position: absolute;
@@ -81,12 +87,14 @@
 
   &__keyword {
     margin-bottom: 4%;
+
     h2 {
       margin: 0 0 12px 12px;
       font-size: 25px;
       letter-spacing: 0.025em;
       color: color(green);
       position: relative;
+
       &:before {
         content: '';
         position: absolute;
@@ -108,6 +116,7 @@
     &__paragraph {
       display: flex;
       flex-direction: column;
+
       span {
         font-weight: 400;
         font-size: 16px;
@@ -139,7 +148,7 @@
     @include phoneScreen {
       height: 300px;
     }
-    
+
     video {
       width: 100%;
       height: 100%;
@@ -150,6 +159,7 @@
   &__info__right {
     width: 100%;
     margin-bottom: 5%;
+
     h1 {
       margin: 0 12px 12px 0;
       font-size: 30px;
@@ -158,6 +168,7 @@
       letter-spacing: 0.025em;
       color: color(green);
       position: relative;
+
       &:after {
         content: '';
         position: absolute;
