--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,6 +1,9 @@
 $colors: (
         black: #000,
         border: #e1e1e1,
+        bredcrumbs_link: #919191,
+        bredcrumbs: #b1b1b1,
+
         dark: #212121,
         white: #FFF,
         lightgreen: #2E6143,
