--- a/features/about/tab_who_we/Whowe.module.scss
+++ b/features/about/tab_who_we/Whowe.module.scss
@@ -5,7 +5,7 @@
   max-width: 600px;
   display: flex;
   justify-content: center;
-  margin: 0 auto;
+  margin: 40px auto;
   &_history{
     &_svg {
       display: flex;
