--- a/features/about/tab_references/References.module.scss
+++ b/features/about/tab_references/References.module.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/mixins.scss';
-@import '../../../styles/variables.scss';
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
 
 .references_container {
   max-width: 600px;
