--- a/features/home/news/News.module.scss
+++ b/features/home/news/News.module.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/mixins.scss';
-@import '../../../styles/variables.scss';
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
 
 .news_container {
   display: grid;
